--- a/AgendaApp/src/app/components/contacts/contacts.component.html
+++ b/AgendaApp/src/app/components/contacts/contacts.component.html
@@ -196,7 +196,7 @@
           <div class="card mb-3 " >
               <div class="row no-gutters">
                 <div class="col-md-4">
-                  <img src="{{ url + 'obtener-imagen-usuario/' + contact.imagen }}" class="card-img" alt="...">
+                  <img src="{{ url + 'obtener-imagen-contacto/' + contact.imagen }}" class="card-img" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body text-right">
